# ocel-2.0-to-celonis

./: .env.template  .gitignore  README.md  docker-compose.yml
backend/: .env.template  .gitignore  Dockerfile  README.md  config.py  enums.py  jsonocel-manipulation-cli.py  justfile  main.py  pyproject.toml  test_client.py
backend/celonis/: client.py  router.py
backend/cloudflare/: client.py  router.py
backend/splitter/: client.py  splitter.py  utils.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/: styles.css
frontend/src/components/: control-panel.tsx  header.tsx  login-modal.tsx  logs-panel.tsx  mfa-modal.tsx  url-selection-modal.tsx
frontend/src/lib/: config.ts  store.ts  types.ts  upload.ts
frontend/src/routes/: index.tsx
