[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.27",
    "click>=8.1.8",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.3.0",
    "pm4py>=2.7.15.3",
    "pydantic-settings>=2.9.1",
    "questionary>=2.1.0",
    "rust-just>=1.40.0",
    "websockets>=15.0.1",
]
